[package]
name = "rs_async_iter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/berlinen/rs_async_iter.git"
description = "An async version of iterator"
readme = "README.md"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]
std = []
alloc = []
